--- a/cloud-commons/pom.xml
+++ b/cloud-commons/pom.xml
@@ -29,6 +29,12 @@
             <version>2.0.34</version>
         </dependency>
 
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 
 
